plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ebiz'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Oracle OCI SDK
	implementation 'com.oracle.oci.sdk:oci-java-sdk-objectstorage:2.8.1'
	implementation 'com.oracle.oci.sdk:oci-java-sdk-common:2.8.1'
	implementation 'com.oracle.oci.sdk:oci-java-sdk-core:2.8.1'
	implementation 'com.oracle.oci.sdk:oci-java-sdk-database:2.8.1'

	// Jersey
	implementation 'org.glassfish.jersey.core:jersey-client:2.34'
	implementation 'org.glassfish.jersey.core:jersey-common:2.34'
	implementation 'org.glassfish.jersey.core:jersey-server:2.34'
	implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:2.34'
	implementation 'org.glassfish.jersey.inject:jersey-hk2:2.34'
	implementation 'org.glassfish.jersey.connectors:jersey-apache-connector:2.34'


	implementation 'javax.annotation:javax.annotation-api:1.3.2'

	implementation 'org.springframework.boot:spring-boot-starter-security'


	// QueryDSL 의존성
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0'

	// Jakarta API
	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	implementation 'jakarta.transaction:jakarta.transaction-api:2.0.0'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.0.0'


	// 테스트 의존성
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Jakarta Activation 및 JAXB
	implementation 'jakarta.activation:jakarta.activation-api:2.0.0'
	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.0'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'

	implementation 'com.fasterxml.jackson.module:jackson-module-jaxb-annotations:2.17.2'

	// JAX-RS API (javax)
	implementation 'javax.ws.rs:javax.ws.rs-api:2.1.1'

}

tasks.named('test') {
	useJUnitPlatform()
}
